# 4ch-py

./: .dockerignore  .gitignore  0_define_tags.sh  0_extract_surfs.sh  1_calculate_UVCs.sh  1_extract_surfs.sh  1b_optional_cp_la_ra_points.sh  2_add_vent_fibres.sh  2_split_fec.sh  3_create_surfaces_endo_landmarks.sh  3_map_2d_to_3d.sh  4_la_4ch_endo.sh  5_ra_4ch_endo.sh  6_map_2d_to_3d.sh  7.5_create_EAS.sh  7.5_create_electrodes.sh  7_define_tags.sh  8_extract_surfs.sh  9_split_fec.sh  Dockerfile  README.md  README_conda_setup  code_analysis.xlsx  correct_fibres.py  helper_visualise_surf.py  main_UVCs.py  main_UVCs_automatic.py  main_UVCs_refact.py  main_electrodes.py  main_fec.py  main_fibres.py  main_laplace.py  main_mesh.py  main_mesh_v3.py  main_select_landmarks.py  main_surf_to_volume.py  main_surf_to_volume_tags.py  main_surfs.py  main_surfs_presim.py  main_tags.py  (+4 more)
common/: UAC_surface_utils.py  distance_utils.py  file_utils.py  json_utils.py  linalg_utils.py  mesh_utils.py  meshtools_utils.py  simulation_utils.py
common_4ch/: UAC_surface_utils.py  carp_wrapper.py  config.py  create_commands.py  custom_commands.py  distance_utils.py  file_utils.py  linalg_utils.py  mesh_utils.py  meshtools_utils.py  motion_volume.py  process_handler.py  simulation_utils.py
docker/: DOCKER_USAGE.md  check_installs.py  entrypoint.py  entrypoint_script.py
parfiles/: atria_map_settings.json  bachmann_bundle_fec_settings.json  carpf_laplace_endo_epi.par  fascicles_settings.json  heartFolder.txt  myocardium_AV_FEC_BB_SA.vtx  myocardium_AV_FEC_BB_apex.vtx  tags_atrial_fibres.json  (+3 more)
(+6 files in other folders)
